// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form ticket forms validation renders the error messages 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c13 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c15 {
  position: relative;
  display: inline-block;
}

.c15 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c15 svg:hover path,
.c15 svg:active path,
.c15 svg:focus path {
  fill: #68737d;
}

.c15 svg path {
  fill: #87929d;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10.c10 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c11.c11 {
  position: relative;
}

.c11:focus {
  outline: none;
}

.c12 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c9 {
  cursor: default;
}

.c9.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8.c8.c8 {
  margin-bottom: 0 !important;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="119val-field_1.3.3--input"
              id="119val-field_1.3.3--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="119val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="119val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="name-field"
              id="119val-field_1.3.3--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="120val-field_1.3.3--input"
              id="120val-field_1.3.3--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="120val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="120val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="email-field"
              id="120val-field_1.3.3--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a valid email address.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="1"
              for="121val-field_1.3.3--input"
              id="121val-field_1.3.3--label"
            >
              <strong>
                Description
              </strong>
            </label>
            <input
              aria-describedby="121val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="121val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="121val-field_1.3.3--input"
              name="1"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="2"
              for="122val-field_1.3.3--input"
              id="122val-field_1.3.3--label"
            >
              <strong>
                Subject
              </strong>
            </label>
            <input
              aria-describedby="122val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="122val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="122val-field_1.3.3--input"
              name="2"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="4"
              for="123val-field_1.3.3--input"
              id="123val-field_1.3.3--label"
            >
              <strong>
                Favorite Burger
              </strong>
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.1.10"
              id="123val-field_1.3.3--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="123val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="123val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="123val-field_1.3.3--input"
              name="4"
              required=""
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="7"
              for="124val-field_1.3.3--input"
              id="124val-field_1.3.3--label"
            >
              <strong>
                Favorite Integer
              </strong>
            </label>
            <input
              aria-describedby="124val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="124val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="124val-field_1.3.3--input"
              min="0"
              name="7"
              required=""
              step="1"
              type="number"
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="8"
              for="125val-field_1.3.3--input"
              id="125val-field_1.3.3--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="125val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="125val-field_1.3.3--label"
              class="text__c-txt__input___38pRd text__c-txt__input--error___2-sbj "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="125val-field_1.3.3--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a number.
            </div>
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="10"
              for="126val-field_1.3.3--input"
              id="126val-field_1.3.3--label"
            >
              <strong>
                Favorite Textarea
              </strong>
            </label>
            <textarea
              aria-describedby="126val-field_1.3.3--hint"
              aria-invalid="true"
              aria-labelledby="126val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--error___2-sbj text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              id="126val-field_1.3.3--input"
              name="10"
              required=""
              rows="5"
            />
            <div
              class="text__c-txt__message___ayY8L text__c-txt__message--error___mRTmE "
              data-garden-id="forms.text_message"
              data-garden-version="7.1.10"
              role="alert"
            >
              Please enter a value.
            </div>
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <div
                class="checkbox__c-chk___1VO4F "
              >
                <input
                  aria-labelledby="127val-field_1.3.3--label"
                  class="checkbox__c-chk__input___3419r "
                  data-garden-container-id="containers.keyboardfocus"
                  data-garden-container-version="0.4.4"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.1.10"
                  id="127val-field_1.3.3--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="checkbox__c-chk__label___12wm4 "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.1.10"
                  data-keyid="11"
                  for="127val-field_1.3.3--input"
                  id="127val-field_1.3.3--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="checkbox__c-chk__message___3asiy checkbox__c-chk__message--error___WDZJE "
                  data-garden-id="forms.checkbox_message"
                  data-garden-version="7.1.10"
                >
                  Please check this box to proceed.
                </div>
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-2-label"
              class="text__c-txt___3byGW "
              data-garden-id="dropdowns.field"
              data-garden-version="7.1.10"
              role="combobox"
            >
              <label
                class="text__c-txt__label___2Nog7 "
                data-garden-id="dropdowns.label"
                data-garden-version="7.1.10"
                data-keyid="12"
                for="downshift-2-input"
                id="downshift-2-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                aria-haspopup="true"
                aria-invalid="true"
                class="c8 text__c-txt__input___17zQx text__c-txt__input--select___324ys text__c-txt__input--error___10oSv c9"
                data-garden-id="dropdowns.select"
                data-garden-version="7.1.10"
                data-testid="dropdown-field"
                data-toggle="true"
                name="12"
                role="button"
                tabindex="0"
                type="button"
              >
                -
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c10"
                  id="downshift-2-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
              <div
                class="text__c-txt__message___L_GjG text__c-txt__message--error___2zV-K "
                data-garden-id="dropdowns.message"
                data-garden-version="7.1.10"
                role="alert"
              >
                Please enter a value.
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class=""
              >
                <ul
                  aria-labelledby="downshift-2-label"
                  class="index__c-menu___3N4tx c11"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.1.10"
                  data-testid="dropdown-options"
                  id="downshift-2-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="c12"
                  />
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value=""
          />
          <span />
        </div>
      </div>
      <footer
        class="c13"
      >
        <div
          class="c14"
        >
          <a
            class="c15"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          />
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="1val-field_1.3.3--input"
              id="1val-field_1.3.3--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="1val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="1val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="name-field"
              id="1val-field_1.3.3--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="2val-field_1.3.3--input"
              id="2val-field_1.3.3--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="2val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="2val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="email-field"
              id="2val-field_1.3.3--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <span />
        </div>
      </div>
      <footer
        class="c8"
      >
        <div
          class="c9"
        >
          <a
            class="c10"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;

exports[`ticket forms renders the extra fields defined in the ticket form 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c13 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c15 {
  position: relative;
  display: inline-block;
}

.c15 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c15 svg:hover path,
.c15 svg:active path,
.c15 svg:focus path {
  fill: #68737d;
}

.c15 svg path {
  fill: #87929d;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10.c10 {
  vertical-align: baseline;
  position: absolute;
  left: -100px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  outline: 0;
  border-width: 0;
  border-style: initial;
  border-color: initial;
  background: 0 center;
  width: 1px;
  color: transparent;
  font-size: inherit;
}

.c11.c11 {
  position: relative;
}

.c11:focus {
  outline: none;
}

.c12 {
  overflow-y: auto;
  max-height: 17.142857142857142rem;
}

.c9 {
  cursor: default;
}

.c9.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8.c8.c8 {
  margin-bottom: 0 !important;
}

<div>
  <form
    class="form "
    novalidate=""
  >
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            message
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.icon_button"
            data-garden-version="7.1.10"
            tabindex="0"
            type="button"
          >
            <svg
              class="index__c-btn__icon___3V0Rl"
              data-garden-id="buttons.icon"
              data-garden-version="7.1.10"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="c7"
        data-testid="scroll-container-content"
      >
        <div
          class="formWrapper"
        >
          <h2
            class="ticketFormTitle "
          >
            Ticket Forms
          </h2>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="19val-field_1.3.3--input"
              id="19val-field_1.3.3--label"
            >
              <strong>
                Your name
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="19val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="19val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="name-field"
              id="19val-field_1.3.3--input"
              name="name"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="20val-field_1.3.3--input"
              id="20val-field_1.3.3--label"
            >
              <strong>
                Email address
              </strong>
            </label>
            <input
              aria-describedby="20val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="20val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              data-testid="email-field"
              id="20val-field_1.3.3--input"
              name="email"
              pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
              required=""
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="1"
              for="21val-field_1.3.3--input"
              id="21val-field_1.3.3--label"
            >
              <strong>
                Description
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="21val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="21val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="21val-field_1.3.3--input"
              name="1"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="2"
              for="22val-field_1.3.3--input"
              id="22val-field_1.3.3--label"
            >
              <strong>
                Subject
              </strong>
               (optional)
            </label>
            <input
              aria-describedby="22val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="22val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="22val-field_1.3.3--input"
              name="2"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="4"
              for="23val-field_1.3.3--input"
              id="23val-field_1.3.3--label"
            >
              <strong>
                Favorite Burger
              </strong>
               (optional)
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.1.10"
              id="23val-field_1.3.3--hint"
            >
              blah blah
            </div>
            <input
              aria-describedby="23val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="23val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="23val-field_1.3.3--input"
              name="4"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="5"
              for="24val-field_1.3.3--input"
              id="24val-field_1.3.3--label"
            >
              <strong>
                Favorite Pizza
              </strong>
            </label>
            <input
              aria-describedby="24val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="24val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="24val-field_1.3.3--input"
              name="5"
              required=""
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="7"
              for="25val-field_1.3.3--input"
              id="25val-field_1.3.3--label"
            >
              <strong>
                Favorite Integer
              </strong>
               (optional)
            </label>
            <div
              class="text__c-txt__hint___24dmS "
              data-garden-id="forms.text_hint"
              data-garden-version="7.1.10"
              id="25val-field_1.3.3--hint"
            >
              description number
            </div>
            <input
              aria-describedby="25val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="25val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="25val-field_1.3.3--input"
              min="0"
              name="7"
              step="1"
              type="number"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="8"
              for="26val-field_1.3.3--input"
              id="26val-field_1.3.3--label"
            >
              <strong>
                Favorite Decimal
              </strong>
            </label>
            <input
              aria-describedby="26val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="26val-field_1.3.3--label"
              class="text__c-txt__input___38pRd "
              data-garden-id="forms.input"
              data-garden-version="7.1.10"
              id="26val-field_1.3.3--input"
              name="8"
              required=""
              step="any"
              type="number"
              value=""
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="9"
              for="27val-field_1.3.3--input"
              id="27val-field_1.3.3--label"
            >
              <strong>
                Favorite Description
              </strong>
            </label>
            <textarea
              aria-describedby="27val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="27val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              id="27val-field_1.3.3--input"
              name="9"
              required=""
              rows="5"
            />
          </div>
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              data-keyid="10"
              for="28val-field_1.3.3--input"
              id="28val-field_1.3.3--label"
            >
              <strong>
                Favorite Textarea
              </strong>
               (optional)
            </label>
            <textarea
              aria-describedby="28val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="28val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              id="28val-field_1.3.3--input"
              name="10"
              rows="5"
            />
          </div>
          <div
            data-testid="checkbox-field"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <div
                class="checkbox__c-chk___1VO4F "
              >
                <input
                  aria-labelledby="29val-field_1.3.3--label"
                  class="checkbox__c-chk__input___3419r "
                  data-garden-container-id="containers.keyboardfocus"
                  data-garden-container-version="0.4.4"
                  data-garden-id="forms.checkbox"
                  data-garden-version="7.1.10"
                  id="29val-field_1.3.3--input"
                  name="11"
                  required=""
                  tabindex="0"
                  type="checkbox"
                />
                <label
                  class="checkbox__c-chk__label___12wm4 "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.checkbox_label"
                  data-garden-version="7.1.10"
                  data-keyid="11"
                  for="29val-field_1.3.3--input"
                  id="29val-field_1.3.3--label"
                >
                  <strong>
                    Favorite Checkbox
                  </strong>
                </label>
                <div
                  class="checkbox__c-chk__hint___1WMmR "
                  data-garden-id="forms.checkbox_hint"
                  data-garden-version="7.1.10"
                  id="29val-field_1.3.3--hint"
                >
                  this is the description
                </div>
              </div>
            </div>
          </div>
          <div
            role="presentation"
            tabindex="-1"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="text__c-txt___3byGW "
              data-garden-id="dropdowns.field"
              data-garden-version="7.1.10"
              role="combobox"
            >
              <label
                class="text__c-txt__label___2Nog7 "
                data-garden-id="dropdowns.label"
                data-garden-version="7.1.10"
                data-keyid="12"
                for="downshift-0-input"
                id="downshift-0-label"
              >
                <strong>
                  Favorite Tagger
                </strong>
              </label>
              <div
                class="text__c-txt__hint___3a0Q6 "
                data-garden-id="dropdowns.hint"
                data-garden-version="7.1.10"
              >
                this is the tagger description
              </div>
              <div
                aria-haspopup="true"
                aria-invalid="false"
                class="c8 text__c-txt__input___17zQx text__c-txt__input--select___324ys c9"
                data-garden-id="dropdowns.select"
                data-garden-version="7.1.10"
                data-testid="dropdown-field"
                data-toggle="true"
                name="12"
                role="button"
                tabindex="0"
                type="button"
              >
                two
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="text__c-txt__input___17zQx text__c-txt__input--bare___PN_Zg c10"
                  id="downshift-0-input"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
            </div>
            <div
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none; z-index: -1; visibility: hidden;"
            >
              <div
                class=""
              >
                <ul
                  aria-labelledby="downshift-0-label"
                  class="index__c-menu___3N4tx c11"
                  data-garden-id="dropdowns.menu"
                  data-garden-version="7.1.10"
                  data-testid="dropdown-options"
                  id="downshift-0-menu"
                  role="listbox"
                  style="width: 0px;"
                >
                  <div
                    class="c12"
                  />
                </ul>
              </div>
            </div>
          </div>
          <input
            data-testid="dropdown-selected-value"
            name="12"
            type="hidden"
            value="2"
          />
          <span />
        </div>
      </div>
      <footer
        class="c13"
      >
        <div
          class="c14"
        >
          <a
            class="c15"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <button
            class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="button-ok"
            tabindex="0"
            type="submit"
          >
            Send
          </button>
        </div>
      </footer>
    </div>
  </form>
</div>
`;
